Sun, Nov 23, 2025, 3:54 PM -03:00

--- a/novo_bd1971_robusto/site/templates/clube.html
+++ b/novo_bd1971_robusto/site/templates/clube.html
@@ -114,7 +114,9 @@
                                     <a href="/clube/{{ jogo['visitante'] }}">{{ jogo['visitante'] }}</a>
                                 {% endif %}
                             </td>
-                            <td class="arena-info">{{ jogo['arena'] if jogo['arena'] else '-' }}</td>
+                            <td class="arena-info">
+                                <a href="/estadio/{{ jogo['arena'] }}">{{ jogo['arena'] if jogo['arena'] else '-' }}</a>
+                            </td>
                         </tr>
                         {% endfor %}
                     </tbody>
