Sun, Nov 23, 2025, 3:58 PM -03:00

--- a/novo_bd1971_robusto/site/templates/clube.html
+++ b/novo_bd1971_robusto/site/templates/clube.html
@@ -115,7 +115,11 @@
                                 {% endif %}
                             </td>
                             <td class="arena-info">
-                                <a href="/estadio/{{ jogo['arena'] }}">{{ jogo['arena'] if jogo['arena'] else '-' }}</a>
+                                {% if jogo['arena'] %}
+                                    <a href="/estadio/{{ jogo['arena'] }}">{{ jogo['arena'] if jogo['arena'] else '-' }}</a>
+                                { % else %}
+                                    -
+                                { % endif %}
                             </td>
                         </tr>
                         {% endfor %}
