Sun, Nov 23, 2025, 3:59 PM -03:00

--- a/novo_bd1971_robusto/site/templates/clube.html
+++ b/novo_bd1971_robusto/site/templates/clube.html
@@ -116,10 +116,10 @@
                             </td>
                             <td class="arena-info">
                                 {% if jogo['arena'] %}
-                                    <a href="/estadio/{{ jogo['arena'] }}">{{ jogo['arena'] if jogo['arena'] else '-' }}</a>
-                                { % else %}
+                                    <a href="/estadio/{{ jogo['arena'] }}">{{ jogo['arena'] }}</a>
+                                {% else %}
                                     -
-                                { % endif %}
+                                {% endif %}
                             </td>
                         </tr>
                         {% endfor %}
