Sun, Nov 23, 2025, 4:04 PM -03:00

--- a/novo_bd1971_robusto/site/templates/search.html
+++ b/novo_bd1971_robusto/site/templates/search.html
@@ -225,7 +225,7 @@
                                 <td>${jogo.data}</td>
                                 <td>${jogo.rodada}</td>
                                 <td><a href="/clube/${jogo.mandante}">${jogo.mandante}</a></td>
-                                <td><a href="/estatisticas/${jogo.ID}">${jogo.mandante_placar} x ${jogo.visitante_placar}</a></td>
+                                <td><a href="/jogo/${jogo.ID}">${jogo.mandante_placar} x ${jogo.visitante_placar}</a></td>
                                 <td><a href="/clube/${jogo.visitante}">${jogo.visitante}</a></td>
                             </tr>
                         `;
