--- a/novo_bd1971_robusto/site/templates/clube.html
+++ b/novo_bd1971_robusto/site/templates/clube.html
@@ -116,7 +116,7 @@
                             </td>
                             <td class="arena-info">
                                 {% if jogo['arena'] %}
-                                    <a href="/estadio/{{ jogo['arena'] }}">{{ jogo['arena'] }}</a>
+                                    <a href="/estadio/{{ jogo['est_id'] }}">{{ jogo['arena'] }}</a>
                                 {% else %}
                                     -
                                 {% endif %}
